# csvw_functions

./: .gitignore  README.md  pyproject.toml  setup.cfg
csvw_functions/: __init__.py  csvw_functions.py  csvw_functions2.py  csvw_functions_extra.py  normalize_metadata.py  shared_functions.py
csvw_functions/metadata_schema_files/: column_description.schema.json  common_properties.schema.json  datatype_description.schema.json  dialect_description.schema.json  foreign_key_definition.schema.json  foreign_key_reference.schema.json  inherited_properties.schema.json  number_format.schema.json  schema_description.schema.json  table_description.schema.json  table_group_description.schema.json  top_level_properties.schema.json  transformation_definition.schema.json
csvw_functions/model_schema_files/: annotated_cell.schema.json  annotated_column.schema.json  annotated_datatype.schema.json  annotated_row.schema.json  annotated_table.schema.json  annotated_table_group.schema.json  cell.schema.json  column.schema.json  datatype.schema.json  (+3 more)
tests/: annotated_table_group_dict-WIN-CVSKF-6537.json  annotated_table_group_dict.json  embedded_metadata_dict.json  extra_tables-metadata.json  g1.ttl  g2.ttl  json_ld.json  metadata_table_group_dict.json  metadata_table_group_dict_NORMALIZED.json  metadata_table_group_obj_dict.json  temp.json  test_csvw_functions.py  test_csvw_functions2.py  test_csvw_functions_extra.py  test_csvw_primer_examples.py  test_csvw_validation_tests.py  test_large_file.py  test_normalize_metadata.py  test_shared_functions.py  test_validating_metadata_files.py
(+40 files in other folders)
